@@ -60,6 +60,18 @@ Use `isStarted()` to check if the agent has already started.
 Returns `true` if the agent has started,
 otherwise returns `false`.
 
+[[apm-get-service-name]]
+==== `apm.getServiceName()`
+
+[small]#Added in: v3.11.0#
+
+Get the configured <<service-name,`serviceName`>>. If a service name was not
+explicitly configured, this value may have been automatically determined.
+
+This may be called before `agent.start()`, but the values before and after
+might differ as config is reloaded during and can be set from options given to
+`.start()`. A misconfigured agent can have an `undefined` service name.
+
 [[apm-set-framework]]
 ==== `apm.setFramework(options)`
 
