@@ -183,6 +183,10 @@ Agent.prototype.start = function (opts) {
   return this
 }
 
+Agent.prototype.getServiceName = function () {
+  return this._conf.serviceName
+}
+
 Agent.prototype.setFramework = function ({ name, version, overwrite = true }) {
   if (!this._transport || !this._conf) return
   const conf = {}
